web-infras/parser/tests/fixtures/babel/es2015/modules/duplicate-export-default-and-export-as-default/output.txt
[SyntaxError]: Identifier has already been declared. (2,17)
2|export { foo as default };
 |               ^
[SyntaxError]: Export variable is not defined. (2,10)
2|export { foo as default };
 |        ^
